# GScript.Grclib

./: CMakeLists.txt
.github/workflows/: build.yml
include/: grclib.h
src/: grclib.cpp  protocol.cpp
