cmake_minimum_required(VERSION 3.10)
project(grclib VERSION 1.0.0 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(SOURCES src/grclib.cpp)
set(HEADERS src/grclib.h)
add_library(grclib SHARED ${SOURCES} ${HEADERS})
target_include_directories(grclib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/deps)
if(WIN32)
    target_link_libraries(grclib PRIVATE ws2_32 advapi32 iphlpapi)
    target_compile_definitions(grclib PRIVATE GRCLIB_EXPORTS)
endif()
if(APPLE)
    target_link_libraries(grclib PRIVATE "-framework CoreFoundation" "-framework IOKit")
endif()
# add_library(grclib_static STATIC ${SOURCES} ${HEADERS})
# target_include_directories(grclib_static PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)
# if(WIN32)
#     target_link_libraries(grclib_static PRIVATE ws2_32)
# endif()
set_target_properties(grclib PROPERTIES OUTPUT_NAME grclib VERSION ${PROJECT_VERSION} SOVERSION 1)
# set_target_properties(grclib_static PROPERTIES OUTPUT_NAME grclib)
install(TARGETS grclib LIBRARY DESTINATION lib ARCHIVE DESTINATION lib RUNTIME DESTINATION bin)
install(FILES ${HEADERS} DESTINATION include)
